// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatFetchError format isomorphic-fetch response error correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "403 Forbidden",
  "status": 403,
}
`;

exports[`formatFetchError format network error correctly 1`] = `
Object {
  "category": "FETCH_NETWORK_ERROR",
  "code": "UNABLE_TO_VERIFY_LEAF_SIGNATURE",
  "message": "request to https://mock.com/ failed, reason: unable to verify the first certificate",
}
`;

exports[`formatFetchError format node-fetch response error correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "403 Forbidden",
  "status": 403,
}
`;

exports[`formatFetchNetworkError format network error correctly 1`] = `
Object {
  "category": "FETCH_NETWORK_ERROR",
  "code": "UNABLE_TO_VERIFY_LEAF_SIGNATURE",
  "message": "request to https://mock.com/ failed, reason: unable to verify the first certificate",
}
`;

exports[`formatFetchResponseError format error in application/json contentType correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "application/json; charset=utf-8",
  "message": Object {
    "document": "some url",
    "message": "some message",
  },
  "status": 404,
}
`;

exports[`formatFetchResponseError format error in text/html contentType correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/html; charset=utf-8",
  "message": "<html></html>",
  "status": 404,
}
`;

exports[`formatFetchResponseError format error in text/plain contentType correctly 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "403 Forbidden",
  "status": 403,
}
`;

exports[`formatFetchResponseError reports wrong response being threw to catch if response is ok 1`] = `
Object {
  "category": "FETCH_RESPONSE_OK",
  "message": "it shouldn't be caught as exception, please check the code",
  "status": 200,
}
`;
